feat: admin rpc
