# server/docs/openapi.yaml
@@ -5,7 +5,7 @@ openapi: 3.0.3
 info:
     title: Gflow
     description: Gflow OpenAPI3.0 Document
-    version: 56de177b6f041d9bf46c6a6c2dd53f34de12cb8a
+    version: affe74951a7c5a44d8feeddbaa067aecd8ef0871
 paths:
     /v1/admin/interfaces:
         get:
@@ -129,6 +129,32 @@ paths:
             security:
                 - bearerAuth:
                     - Role:get
+        post:
+            tags:
+                - AdminRPC
+            operationId: AdminRPC_CreateRole
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/rpc.CreateRoleRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/rpc.CreateRoleResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
+            security:
+                - bearerAuth:
+                    - Role:post
     /v1/admin/roles/{id}:
         get:
             tags:
@@ -156,6 +182,64 @@ paths:
             security:
                 - bearerAuth:
                     - Role:get
+        delete:
+            tags:
+                - AdminRPC
+            operationId: AdminRPC_DeleteRole
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/rpc.DeleteRoleResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
+            security:
+                - bearerAuth:
+                    - Role:delete
+        patch:
+            tags:
+                - AdminRPC
+            operationId: AdminRPC_UpdateRole
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/rpc.UpdateRoleRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/rpc.UpdateRoleResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
+            security:
+                - bearerAuth:
+                    - Role:patch
     /v1/admin/routes:
         get:
             tags:
@@ -390,6 +474,32 @@ paths:
             security:
                 - bearerAuth:
                     - User:get
+        post:
+            tags:
+                - AdminRPC
+            operationId: AdminRPC_CreateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/rpc.CreateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/rpc.CreateUserResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/google.rpc.Status'
+            security:
+                - bearerAuth:
+                    - User:post
     /v1/admin/users/{id}:
         get:
             tags:
@@ -1150,6 +1260,27 @@ components:
                     type: string
                 content:
                     type: string
+        rpc.CreateRoleRequest:
+            type: object
+            properties:
+                type:
+                    type: integer
+                    format: enum
+                name:
+                    type: string
+                displayName:
+                    type: string
+                description:
+                    type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
+        rpc.CreateRoleResponse:
+            type: object
+            properties:
+                role:
+                    $ref: '#/components/schemas/types.Role'
         rpc.CreateRouteRequest:
             type: object
             properties:
@@ -1160,9 +1291,36 @@ components:
         rpc.CreateRouteResponse:
             type: object
             properties: {}
+        rpc.CreateUserRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                email:
+                    type: string
+                description:
+                    type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
+                password:
+                    type: string
+                roleId:
+                    type: string
+        rpc.CreateUserResponse:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/types.User'
         rpc.DeletePolicyResponse:
             type: object
             properties: {}
+        rpc.DeleteRoleResponse:
+            type: object
+            properties:
+                role:
+                    $ref: '#/components/schemas/types.Role'
         rpc.DeleteRouteRequest:
             type: object
             properties:
@@ -1411,6 +1569,26 @@ components:
             properties:
                 definitions:
                     $ref: '#/components/schemas/types.Definitions'
+        rpc.UpdateRoleRequest:
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                displayName:
+                    type: string
+                description:
+                    type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
+        rpc.UpdateRoleResponse:
+            type: object
+            properties:
+                role:
+                    $ref: '#/components/schemas/types.Role'
         rpc.UpdateSelfRequest:
             type: object
             properties:
@@ -1436,6 +1614,19 @@ components:
             properties:
                 id:
                     type: string
+                email:
+                    type: string
+                description:
+                    type: string
+                metadata:
+                    type: object
+                    additionalProperties:
+                        type: string
+                password:
+                    type: string
+                init:
+                    type: integer
+                    format: int32
         rpc.UpdateUserResponse:
             type: object
             properties:
@@ -1854,12 +2045,25 @@ components:
                     type: string
                 hashedPassword:
                     type: string
+                roleId:
+                    type: string
+                login:
+                    $ref: '#/components/schemas/types.UserLoginSpec'
+        types.UserLoginSpec:
+            type: object
+            properties:
                 firstLogon:
                     type: string
                 lastLogon:
                     type: string
-                roleId:
+                isLocked:
+                    type: integer
+                    format: int32
+                lockTimestamp:
                     type: string
+                failedRetry:
+                    type: integer
+                    format: int32
         types.Value:
             type: object
             properties:
